Np 46410 FetchNviInstitutionReport updates (#97)
* Update tests, make institutionId query param. Remove Unauthorized test

* Add test shouldReturnBadRequestIfQueryParameterInstitutionIdIsMissing

* Update handler according to new tests

* Add URL-encoding

* Update openapi.yaml

* Fix copy paste error in openapi.yaml
