# docs/openapi.yaml
@@ -133,9 +133,7 @@ paths:
       description: Get institution report for nvi for current year. Supporting text/csv download according to <https://www.rfc-editor.org/rfc/rfc4180>, application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet and application/ld+json.
       security:
         - CognitoUserPool: [
-          'https://api.nva.unit.no/scopes/backend',
-          'https://api.nva.unit.no/scopes/frontend',
-          'aws.cognito.signin.user.admin'
+          'https://api.nva.unit.no/scopes/backend'
         ]
       x-amazon-apigateway-integration:
         uri:
@@ -143,6 +141,13 @@ paths:
         responses: { }
         httpMethod: POST
         type: AWS_PROXY
+      parameters:
+        - in: query
+          name: institutionId
+          description: The Cristin organization uri of the institution. This must be a UTF-8 encoded URI
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: "OK"
