# report-api/src/main/java/no/sikt/nva/data/report/api/fetch/FetchNviInstitutionReport.java
@@ -2,6 +2,7 @@ package no.sikt.nva.data.report.api.fetch;
 
 import static com.google.common.net.MediaType.MICROSOFT_EXCEL;
 import static com.google.common.net.MediaType.OOXML_SHEET;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static no.sikt.nva.data.report.api.fetch.CustomMediaType.TEXT_CSV;
 import static no.sikt.nva.data.report.api.fetch.CustomMediaType.TEXT_PLAIN;
 import static no.sikt.nva.data.report.api.fetch.model.ReportFormat.EXCEL;
@@ -9,7 +10,7 @@ import com.amazonaws.services.lambda.runtime.Context;
 import com.google.common.net.MediaType;
 import commons.db.GraphStoreProtocolConnection;
 import commons.formatter.ResponseFormatter;
-import java.net.URI;
+import java.net.URLDecoder;
 import java.util.List;
 import java.util.Map;
 import no.sikt.nva.data.report.api.fetch.formatter.CsvFormatter;
@@ -17,10 +18,9 @@ import no.sikt.nva.data.report.api.fetch.formatter.ExcelFormatter;
 import no.sikt.nva.data.report.api.fetch.formatter.PlainTextFormatter;
 import no.sikt.nva.data.report.api.fetch.model.ReportFormat;
 import no.sikt.nva.data.report.api.fetch.service.QueryService;
-import nva.commons.apigateway.AccessRight;
 import nva.commons.apigateway.ApiGatewayHandler;
 import nva.commons.apigateway.RequestInfo;
-import nva.commons.apigateway.exceptions.UnauthorizedException;
+import nva.commons.apigateway.exceptions.BadRequestException;
 import nva.commons.core.JacocoGenerated;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -29,6 +29,7 @@ public class FetchNviInstitutionReport extends ApiGatewayHandler<Void, String> {
 
     public static final String REPLACE_REPORTING_YEAR = "__REPLACE_WITH_REPORTING_YEAR__";
     public static final String REPLACE_TOP_LEVEL_ORG = "__REPLACE_WITH_TOP_LEVEL_ORGANIZATION__";
+    public static final String QUERY_PARAM_INSTITUTION_ID = "institutionId";
     private static final Logger logger = LoggerFactory.getLogger(FetchNviInstitutionReport.class);
     private static final String ACCEPT = "Accept";
     private static final String NVI_INSTITUTION_SPARQL = "nvi-institution-status";
@@ -51,10 +52,10 @@ public class FetchNviInstitutionReport extends ApiGatewayHandler<Void, String> {
     }
 
     @Override
-    protected String processInput(Void unused, RequestInfo requestInfo, Context context) throws UnauthorizedException {
-        validateAccessRights(requestInfo);
+    protected String processInput(Void unused, RequestInfo requestInfo, Context context) throws BadRequestException {
         var reportingYear = requestInfo.getPathParameter(PATH_PARAMETER_REPORTING_YEAR);
-        var topLevelOrganization = extractTopLevelOrganization(requestInfo);
+        var topLevelOrganization =
+            URLDecoder.decode(requestInfo.getQueryParameter(QUERY_PARAM_INSTITUTION_ID), UTF_8);
         logRequest(topLevelOrganization, reportingYear);
         var reportFormat = ReportFormat.fromMediaType(requestInfo.getHeader(ACCEPT));
         var result = getResult(reportingYear, topLevelOrganization, reportFormat);
@@ -65,12 +66,6 @@ public class FetchNviInstitutionReport extends ApiGatewayHandler<Void, String> {
     @Override
     protected Integer getSuccessStatusCode(Void unused, String o) {
         return 200;
-    }
-
-    private static String extractTopLevelOrganization(RequestInfo requestInfo) {
-        return requestInfo.getTopLevelOrgCristinId()
-                   .map(URI::toString)
-                   .orElse("UnknownRequestTopLevelOrganization");
     }
 
     private static void logRequest(String topLevelOrganization, String reportingYear) {
@@ -90,12 +85,6 @@ public class FetchNviInstitutionReport extends ApiGatewayHandler<Void, String> {
         var replacementStrings = Map.of(REPLACE_REPORTING_YEAR, reportingYear,
                                         REPLACE_TOP_LEVEL_ORG, topLevelOrganization);
         return queryService.getResult(NVI_INSTITUTION_SPARQL, replacementStrings, getFormatter(reportFormat));
-    }
-
-    private void validateAccessRights(RequestInfo requestInfo) throws UnauthorizedException {
-        if (!requestInfo.userIsAuthorized(AccessRight.MANAGE_NVI)) {
-            throw new UnauthorizedException();
-        }
     }
 
     private void setIsBase64EncodedIfReportFormatExcel(ReportFormat reportFormat) {
